msgctl.2: Fix structure member name.

--- a/lib/libc/sys/msgctl.2
+++ b/lib/libc/sys/msgctl.2
@@ -31,7 +31,7 @@
 .\"
 .\" $FreeBSD: src/lib/libc/gen/msgctl.3,v 1.8.2.7 2003/03/13 18:05:37 trhodes Exp $
 .\"
-.Dd January 4, 2014
+.Dd September 12, 2019
 .Dt MSGCTL 2
 .Os
 .Sh NAME
@@ -83,7 +83,7 @@ struct msqid_ds {
 The
 .Vt ipc_perm
 structure used inside the
-.Vt shmid_ds
+.Vt msqid_ds
 structure is defined in
 .In sys/ipc.h
 and looks like this:
