route(4): Add ifam_pid and ifam_addrflags to ifa_msghdr
While here, re-arrange other route(4) message headers so the same
values appear in the same order for consistency.

Bump RTM_VERSION.

--- a/share/man/man4/route.4
+++ b/share/man/man4/route.4
@@ -29,7 +29,7 @@
 .\" $FreeBSD: src/share/man/man4/route.4,v 1.9.2.6 2002/03/17 09:12:44 schweikh Exp $
 .\" $DragonFly: src/share/man/man4/route.4,v 1.3 2004/03/11 12:28:55 hmp Exp $
 .\"
-.Dd August 7, 2019
+.Dd September 12, 2019
 .Dt ROUTE 4
 .Os
 .Sh NAME
@@ -238,9 +238,9 @@ struct if_msghdr {
     u_short ifm_msglen;         /* to skip over non-understood messages */
     u_char  ifm_version;        /* future binary compatibility */
     u_char  ifm_type;           /* message type */
-    int     ifm_addrs;          /* like rtm_addrs */
-    int     ifm_flags;          /* value of if_flags */
     u_short ifm_index;          /* index for associated ifp */
+    int     ifm_flags;          /* value of if_flags */
+    int     ifm_addrs;          /* like rtm_addrs */
     struct  if_data ifm_data;   /* statistics and other data about if */
 };
 
@@ -248,9 +248,11 @@ struct ifa_msghdr {
     u_short ifam_msglen;        /* to skip over non-understood messages */
     u_char  ifam_version;       /* future binary compatibility */
     u_char  ifam_type;          /* message type */
-    int     ifam_addrs;         /* like rtm_addrs */
-    int     ifam_flags;         /* value of ifa_flags */
     u_short ifam_index;         /* index for associated ifp */
+    int     ifam_flags;         /* value of ifa_flags */
+    int     ifam_addrs;         /* like rtm_addrs */
+    pid_t   ifam_pid;           /* identify sender */
+    int     ifam_addrflags;	/* family specific address flags */
     int     ifam_metric;        /* value of ifa_metric */
 };
 
@@ -258,9 +260,9 @@ struct ifma_msghdr {
     u_short ifmam_msglen;       /* to skip over non-understood messages */
     u_char  ifmam_version;      /* future binary compatibility */
     u_char  ifmam_type;         /* message type */
-    int     ifmam_addrs;        /* like rtm_addrs */
-    int     ifmam_flags;        /* value of ifa_flags */
     u_short ifmam_index;        /* index for associated ifp */
+    int     ifmam_flags;        /* value of ifa_flags */
+    int     ifmam_addrs;        /* like rtm_addrs */
 };
 
 struct if_announcemsghdr {
