pam_lastlog.8: Fix .Xr's

--- a/lib/libpam/modules/pam_lastlog/pam_lastlog.8
+++ b/lib/libpam/modules/pam_lastlog/pam_lastlog.8
@@ -34,7 +34,7 @@
 .\"
 .\" $FreeBSD: head/lib/libpam/modules/pam_lastlog/pam_lastlog.8 240506 2012-09-14 17:50:42Z eadler $
 .\"
-.Dd September 11, 2019
+.Dd September 13, 2019
 .Dt PAM_LASTLOG 8
 .Os
 .Sh NAME
@@ -86,8 +86,8 @@ Ignore I/O failures.
 .Xr last 1 ,
 .Xr w 1 ,
 .Xr getutxent 3 ,
-.Xr login 3 ,
-.Xr logout 3 ,
+.Xr loginx 3 ,
+.Xr logoutx 3 ,
 .Xr pam 3 ,
 .Xr pam.conf 5 ,
 .Xr utmpx 5 ,
