getifaddrs.3: Fix .Dd

--- a/lib/libc/net/getifaddrs.3
+++ b/lib/libc/net/getifaddrs.3
@@ -24,7 +24,7 @@
 .\"
 .\" $FreeBSD: src/lib/libc/net/getifaddrs.3,v 1.10 2005/02/09 18:03:13 ru Exp $
 .\"
-.Dd 12 September, 2019
+.Dd September 12, 2019
 .Dt GETIFADDRS 3
 .Os
 .Sh NAME
