--- a/share/man/man9/make_autoclone_dev.9
+++ b/share/man/man9/make_autoclone_dev.9
@@ -29,7 +29,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd December 2, 2012
+.Dd August 22, 2019
 .Dt MAKE_AUTOCLONE_DEV 9
 .Os
 .Sh NAME
@@ -59,7 +59,7 @@
 .Fn devfs_clone_bitmap_uninit "struct devfs_bitmap *bitmap"
 .Ft int
 .Fn devfs_clone_bitmap_chk "struct devfs_bitmap *bitmap" "int unit"
-.Ft void
+.Ft int
 .Fn devfs_clone_bitmap_set "struct devfs_bitmap *bitmap" "int unit"
 .Ft int
 .Fn devfs_clone_bitmap_get "struct devfs_bitmap *bitmap" "int limit"
@@ -191,6 +191,7 @@ is recommended to block the unit numbers of the preallocated devices by
 calling
 .Fn devfs_clone_bitmap_set
 on them.
+The function returns -1 if the unit is already allocated, otherwise 0.
 .Pp
 .Fn devfs_clone_bitmap_put
 marks
