dsynth.1: Fix document title.

--- a/usr.bin/dsynth/dsynth.1
+++ b/usr.bin/dsynth/dsynth.1
@@ -1,3 +1,4 @@
+.\"
 .\" Copyright (c) 2019 The DragonFly Project.  All rights reserved.
 .\"
 .\" This code is derived from software contributed to The DragonFly Project
@@ -32,7 +33,7 @@
 .\" SUCH DAMAGE.
 .\"
 .Dd August 21, 2019
-.Dt DSYNC 8
+.Dt DSYNTH 1
 .Os
 .Sh NAME
 .Nm dsynth
