hier.7: Mention /usr/share/dsynth.

--- a/share/man/man7/hier.7
+++ b/share/man/man7/hier.7
@@ -28,7 +28,7 @@
 .\"	@(#)hier.7	8.1 (Berkeley) 6/5/93
 .\" $FreeBSD: src/share/man/man7/hier.7,v 1.29.2.17 2003/01/13 21:43:50 ceri Exp $
 .\"
-.Dd September 11, 2019
+.Dd September 24, 2019
 .Dt HIER 7
 .Os
 .Sh NAME
@@ -388,6 +388,9 @@ miscellaneous documentation
 License files for vendor supplied firmware
 .El
 .Pp
+.It Pa dsynth/
+.Xr dsynth 1
+scripts
 .It Pa examples/
 various examples for users and programmers
 .It Pa games/
