usr.sbin/autofs: Add DOLLAR
freebsd/freebsd@abc2058c6033886873a3c02254eb3e9cb8d4e489

--- a/usr.sbin/autofs/auto_master.5
+++ b/usr.sbin/autofs/auto_master.5
@@ -28,7 +28,7 @@
 .\"
 .\" $FreeBSD$
 .\"
-.Dd April 14, 2016
+.Dd September 26, 2019
 .Dt AUTO_MASTER 5
 .Os
 .Sh NAME
@@ -189,6 +189,8 @@ Expands to the output of
 .Li "uname -p" .
 .It Li CPU
 Same as ARCH.
+.It Li DOLLAR
+A literal $ sign.
 .It Li HOST
 Expands to the output of
 .Li "uname -n" .
