--- a/sbin/hammer2/hammer2.8
+++ b/sbin/hammer2/hammer2.8
@@ -30,7 +30,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd August 19, 2019
+.Dd September 29, 2019
 .Dt HAMMER2 8
 .Os
 .Sh NAME
@@ -301,6 +301,10 @@ block device directly.  No mount is required.
 .\" ==== freemap ====
 .It Cm freemap Ar devpath
 Dump the freemap tree for the HAMMER2 filesystem by scanning a
+block device directly.  No mount is required.
+.\" ==== volhdr ====
+.It Cm volhdr Ar devpath
+Dump the volume header for the HAMMER2 filesystem by scanning a
 block device directly.  No mount is required.
 .\" ==== setcomp ====
 .It Cm setcomp Ar mode[:level] Ar path...
